# FSCLT

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: CommandFlagStrings.hpp  Dialog.h  FSCLT.hpp  FilesystemFormatHelper.hpp  FilesystemUtilityHelper.hpp  OutputLog.hpp  PCH.hpp  ProceedDialog.h  config.hpp.in
include/Commands/: BaseCommand.hpp  CPrint.hpp  CVersion.hpp  Commands.hpp
src/: CMakeLists.txt  Dialog.cpp  FSCLT.cpp  FilesystemFormatHelper.cpp  FilesystemUtilityHelper.cpp  OutputLog.cpp  ProceedDialog.cpp  main.cpp
src/Commands/: BaseCommand.cpp  CMakeLists.txt  CPrint.cpp  CVersion.cpp
